--- a/notebooks/merge_df.ipynb
+++ b/notebooks/merge_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,38 +26,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "configs\t\t\t\t sub_100_275_0909_all_1.csv\r\n",
-      "mmdetection\t\t\t sub_20_100_0909_5000_1.csv\r\n",
-      "notebooks\t\t\t sub_20_100_0909_all_1.csv\r\n",
-      "preds_0902_3_50_all_lb04195.pkl  sub_htc275_0912am_all.csv\r\n",
-      "scripts\t\t\t\t sub_htc_parent_0912pm_all_1.csv\r\n",
-      "seg\t\t\t\t sub_parent_0905_1.csv\r\n",
-      "sub_0_275_0912am_5000_1.csv\t sub_parent_0911_5000_1.csv\r\n",
-      "sub_100_275_0909_5000_1.csv\t sub_parent_0912am_5000_1.csv\r\n",
-      "sub_100_275_0909_5000_iou03.csv  work_dirs\r\n"
+      "box2mask.ipynb\t\t\t     sort_df_for_ensemble.ipynb\r\n",
+      "check_preds.ipynb\t\t     sub_4195_100_275_5000.csv\r\n",
+      "check_preds-parent.ipynb\t     sub_4195_100_275.csv\r\n",
+      "eda.ipynb\t\t\t     sub_4195_100_276.csv\r\n",
+      "ensemble_csv.ipynb\t\t     sub_4195_20_100_5000.csv\r\n",
+      "ensemble.ipynb\t\t\t     sub_4195_20_100.csv\r\n",
+      "ens_htc275_4619_od1000_0928_275.csv  submit.ipynb\r\n",
+      "filter_classes.ipynb\t\t     submit-parent.ipynb\r\n",
+      "mask2box.ipynb\t\t\t     top_classes.csv\r\n",
+      "merge_df.ipynb\t\t\t     top_classes_level1.csv\r\n",
+      "od_convert_0928.csv\t\t     top_classes_parent.csv\r\n",
+      "od_convert_0928_top1000.csv\t     train_parent.ipynb\r\n"
      ]
     }
    ],
    "source": [
-    "!ls .."
+    "!ls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "csv_files = [\n",
-    "            '../sub_htc275_0912am_all.csv',\n",
-    "            '../sub_htc_parent_0912pm_all_1.csv' #,\n",
+    "            '../sub_htc275_lb4560_top100_iou03_mask42_lb4619.csv',\n",
+    "            'od_convert_0928_top1000_filter275_lowconf.csv',\n",
+    "            '../sub_htc_parent_0927am_lb0338.csv' #,\n",
     "            #'sub_0902_3_top50.csv.zip',\n",
     "            #'sub_parent_0903_1_top50.csv'\n",
     "            ]\n",
@@ -67,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +81,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1, len(dfs)):\n",
+    "    dfs[i] = dfs[i].set_index('ImageID')\n",
+    "    dfs[i] = dfs[i].reindex(index=dfs[0]['ImageID'])\n",
+    "    dfs[i] = dfs[i].reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3438"
+       "5800"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -143,35 +159,35 @@
        "      <td>80155d58d0ee19bd</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...</td>\n",
+       "      <td>/m/083wq 0.0001552 eNodkuuyqjAMRl+p8Xqq4gyIMFt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>52a76f3fe21185bf</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...</td>\n",
+       "      <td>/m/04dr76w 0.0074179 eNqlU+ly2jAQfiVrdYAduykxD...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>65e9da7c04c8e4cd</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...</td>\n",
+       "      <td>/m/04yx4 0.0002104 eNpdkltzokAQhf/S9FAWbGVrH1L...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6d10fa21d93bd6cc</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...</td>\n",
+       "      <td>/m/05r655 0.0006262 eNpFiUEKgDAMBL+0SSuCHgRBpJ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0841dee573a875ca</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...</td>\n",
+       "      <td>/m/05r655 0.0010084 eNp1kutOAjEQhV/pdLfcjMaoQZ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -186,14 +202,14 @@
        "4  0841dee573a875ca        1024          683   \n",
        "\n",
        "                                    PredictionString  \n",
-       "0  /m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...  \n",
-       "1  /m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...  \n",
-       "2  /m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...  \n",
-       "3  /m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...  \n",
-       "4  /m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...  "
+       "0  /m/083wq 0.0001552 eNodkuuyqjAMRl+p8Xqq4gyIMFt...  \n",
+       "1  /m/04dr76w 0.0074179 eNqlU+ly2jAQfiVrdYAduykxD...  \n",
+       "2  /m/04yx4 0.0002104 eNpdkltzokAQhf/S9FAWbGVrH1L...  \n",
+       "3  /m/05r655 0.0006262 eNpFiUEKgDAMBL+0SSuCHgRBpJ...  \n",
+       "4  /m/05r655 0.0010084 eNp1kutOAjEQhV/pdLfcjMaoQZ...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -250,70 +266,70 @@
        "      <td>80155d58d0ee19bd</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/0k4j 0.0144516 eNqFU7luwzAM/SWdcbK0yCZbBxEP...</td>\n",
+       "      <td>/m/01kb5b 0.00682 eNqLiUgwTbbOsDQYBaNgFAwFkJ4U...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>52a76f3fe21185bf</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/01g317 0.0056462 eNozzTZKM4gyzLdJ8wt0xk4HOE...</td>\n",
+       "      <td>/m/0bjyj5 0.00669 eNpLS4q0DUkyCDc2GAWjYDiChEhb...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>65e9da7c04c8e4cd</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/015p6 0.0019611 eNqLSgswNw1NNTD0B0IDA38jP0M...</td>\n",
+       "      <td>/m/0fszt 0.00035 eNoLTDfKTjKINzIYBaNgFIyCUTAKR...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6d10fa21d93bd6cc</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/01g317 0.4327452 eNrNUttugzAM/aWGQAOttIdJBb...</td>\n",
+       "      <td>/m/04yx4 0.00852 eNpLS822Sk4xSDcYBaNgBIOA3FgjA...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0841dee573a875ca</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/0k4j 0.0063638 eNoLCU0yMg1MNbBxM/c08zT3NvYx...</td>\n",
+       "      <td>/m/0342h 0.00693 eNqLyky0TDDLtjMYBaOANBAbl2MKA...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>660329181edd20b4</td>\n",
        "      <td>1024</td>\n",
        "      <td>483</td>\n",
-       "      <td>/m/01g317 0.0118703 eNpNUWFPxCAM/UuFjrGdyRKj2c...</td>\n",
+       "      <td>/m/0cnyhnx 0.00940 eNqLyc81yrKKNDEYBaMABILiIi0...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2dffa0787ba35f70</td>\n",
        "      <td>1024</td>\n",
        "      <td>545</td>\n",
-       "      <td>/m/0c9ph5 0.9175597 eNpVT00LwjAM/Ut5bUXGDkM8OW...</td>\n",
+       "      <td>/m/06m11 0.00545 eNpLTU+xzjcKsjMYBbhBdnK+EQC1F...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>cb66703ecbd0b99a</td>\n",
        "      <td>1024</td>\n",
        "      <td>678</td>\n",
-       "      <td>/m/0k4j 0.0013056 eNoLTzBIM0hIMQACf0MgYehvgAOA...</td>\n",
+       "      <td>/m/079cl 0.00687 eNrLS8k3j7dNNzcYBcSDpLRAKwB17...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2f01f2c68316b5e5</td>\n",
        "      <td>1024</td>\n",
        "      <td>768</td>\n",
-       "      <td>/m/0k4j 0.1164669 eNoLC01OMjDMSzcw8jP0NzQwAGJD...</td>\n",
+       "      <td>/m/01btn 0.00758 eNqLCQmzyLYMtTMYBaNgFIyCUUAMS...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>36cfe3fa46f56ed3</td>\n",
        "      <td>768</td>\n",
        "      <td>768</td>\n",
-       "      <td>/m/0k4j 0.0147882 eNrLzQk1MspKNzDzNHez8jHzNPU1...</td>\n",
+       "      <td>/m/079cl 0.00491 eNoLSjBJSTewMRgFo2AUjIJRMNRBX...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -333,19 +349,19 @@
        "9  36cfe3fa46f56ed3         768          768   \n",
        "\n",
        "                                    PredictionString  \n",
-       "0  /m/0k4j 0.0144516 eNqFU7luwzAM/SWdcbK0yCZbBxEP...  \n",
-       "1  /m/01g317 0.0056462 eNozzTZKM4gyzLdJ8wt0xk4HOE...  \n",
-       "2  /m/015p6 0.0019611 eNqLSgswNw1NNTD0B0IDA38jP0M...  \n",
-       "3  /m/01g317 0.4327452 eNrNUttugzAM/aWGQAOttIdJBb...  \n",
-       "4  /m/0k4j 0.0063638 eNoLCU0yMg1MNbBxM/c08zT3NvYx...  \n",
-       "5  /m/01g317 0.0118703 eNpNUWFPxCAM/UuFjrGdyRKj2c...  \n",
-       "6  /m/0c9ph5 0.9175597 eNpVT00LwjAM/Ut5bUXGDkM8OW...  \n",
-       "7  /m/0k4j 0.0013056 eNoLTzBIM0hIMQACf0MgYehvgAOA...  \n",
-       "8  /m/0k4j 0.1164669 eNoLC01OMjDMSzcw8jP0NzQwAGJD...  \n",
-       "9  /m/0k4j 0.0147882 eNrLzQk1MspKNzDzNHez8jHzNPU1...  "
+       "0  /m/01kb5b 0.00682 eNqLiUgwTbbOsDQYBaNgFAwFkJ4U...  \n",
+       "1  /m/0bjyj5 0.00669 eNpLS4q0DUkyCDc2GAWjYDiChEhb...  \n",
+       "2  /m/0fszt 0.00035 eNoLTDfKTjKINzIYBaNgFIyCUTAKR...  \n",
+       "3  /m/04yx4 0.00852 eNpLS822Sk4xSDcYBaNgBIOA3FgjA...  \n",
+       "4  /m/0342h 0.00693 eNqLyky0TDDLtjMYBaOANBAbl2MKA...  \n",
+       "5  /m/0cnyhnx 0.00940 eNqLyc81yrKKNDEYBaMABILiIi0...  \n",
+       "6  /m/06m11 0.00545 eNpLTU+xzjcKsjMYBbhBdnK+EQC1F...  \n",
+       "7  /m/079cl 0.00687 eNrLS8k3j7dNNzcYBcSDpLRAKwB17...  \n",
+       "8  /m/01btn 0.00758 eNqLCQmzyLYMtTMYBaNgFIyCUUAMS...  \n",
+       "9  /m/079cl 0.00491 eNoLSjBJSTewMRgFo2AUjIJRMNRBX...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,39 +372,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = None\n",
     "for d in dfs:\n",
     "    if x is None:\n",
-    "        x = d.PredictionString\n",
+    "        x = d.PredictionString.map(lambda x: x.strip())\n",
     "    else:\n",
-    "        x = x.str.cat(d.PredictionString, sep=' ')"
+    "        x = x.str.cat(d.PredictionString.map(lambda x: x.strip()), sep=' ')\n",
+    "        \n",
+    "p = x.map(lambda s: ' '.join(s.split()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23927 3438\n"
+      "41432 5800\n"
      ]
     }
    ],
    "source": [
-    "dfs[0].PredictionString = x\n",
+    "dfs[0].PredictionString = p\n",
     "print(len(dfs[0].iloc[0].PredictionString), len(dfs[1].iloc[0].PredictionString))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -424,35 +442,35 @@
        "      <td>80155d58d0ee19bd</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...</td>\n",
+       "      <td>/m/083wq 0.0001552 eNodkuuyqjAMRl+p8Xqq4gyIMFt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>52a76f3fe21185bf</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...</td>\n",
+       "      <td>/m/04dr76w 0.0074179 eNqlU+ly2jAQfiVrdYAduykxD...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>65e9da7c04c8e4cd</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...</td>\n",
+       "      <td>/m/04yx4 0.0002104 eNpdkltzokAQhf/S9FAWbGVrH1L...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>6d10fa21d93bd6cc</td>\n",
        "      <td>1024</td>\n",
        "      <td>682</td>\n",
-       "      <td>/m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...</td>\n",
+       "      <td>/m/05r655 0.0006262 eNpFiUEKgDAMBL+0SSuCHgRBpJ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0841dee573a875ca</td>\n",
        "      <td>1024</td>\n",
        "      <td>683</td>\n",
-       "      <td>/m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...</td>\n",
+       "      <td>/m/05r655 0.0010084 eNp1kutOAjEQhV/pdLfcjMaoQZ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -467,14 +485,14 @@
        "4  0841dee573a875ca        1024          683   \n",
        "\n",
        "                                    PredictionString  \n",
-       "0  /m/083wq 0.0020746 eNqFU01vwyAM/UsYQtJO3WlVlZS...  \n",
-       "1  /m/0fszt 0.0313353 eNq9T00PgjAM/UstG3qah8WL7su...  \n",
-       "2  /m/025nd 0.0010005 eNoLDYlIMrDJTjEw8zH2NfIz9jH...  \n",
-       "3  /m/05r655 0.0119960 eNrtU9tugzAM/aVQLiaV9rCHLR...  \n",
-       "4  /m/05r655 0.0080835 eNpt0dtOAjEQBuBX6rQQoy0anB...  "
+       "0  /m/083wq 0.0001552 eNodkuuyqjAMRl+p8Xqq4gyIMFt...  \n",
+       "1  /m/04dr76w 0.0074179 eNqlU+ly2jAQfiVrdYAduykxD...  \n",
+       "2  /m/04yx4 0.0002104 eNpdkltzokAQhf/S9FAWbGVrH1L...  \n",
+       "3  /m/05r655 0.0006262 eNpFiUEKgDAMBL+0SSuCHgRBpJ...  \n",
+       "4  /m/05r655 0.0010084 eNp1kutOAjEQhV/pdLfcjMaoQZ...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,29 +503,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfs[0].to_csv('merge_0912_1.csv', index=False)"
+    "dfs[0].to_csv('concat_od275_htc4619_parent0338.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████| 2.55G/2.55G [02:07<00:00, 21.5MB/s]\n",
+      "Warning: Looks like you're using an outdated API Version, please consider updating (server 1.5.6 / client 1.5.4)\n",
+      "100%|██████████████████████████████████████| 4.54G/4.54G [02:23<00:00, 34.0MB/s]\n",
       "Successfully submitted to Open Images 2019 - Instance Segmentation"
      ]
     }
    ],
    "source": [
-    "!kaggle competitions submit -c open-images-2019-instance-segmentation -f merge_0912_1.csv -m \"merge 0912\""
+    "!kaggle competitions submit -c open-images-2019-instance-segmentation -f concat_od275_htc4619_parent0338.csv -m \"submit\""
    ]
   },
   {
